styles/globals.css
@import url("https://use.typekit.net/srl4nxi.css");

html,
body {
  font-family: 'proxima-nova', monospace;
  padding: 0;
  margin: 0;
  font-weight: 200;
  font-style: normal;
  color: white;
  animation: hide-scroll 1s;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media screen and (min-width: 601px) {
  html,
  body {
    overflow-x: hidden;
    position: relative;
    background: linear-gradient(105deg, black, black 50%, #3d3d3d 50%, #3d3d3d);
  }
}

@media screen and (max-width: 600px) {
  body {
    overflow-x: hidden;
    position: relative;
    background-color: black;
  }
}

@keyframes hide-scroll {
  from,
  to {
    overflow: hidden;
  }
}

body Home {
  border: 1px white solid;
  display: flex;
  justify-content: center;
  align-items: center;
}

